<resources>
    <string name="app_name">Recycle</string>
    <!--Starter-->
    <string name="title_stater_page">Seu app de coleta de resíduos.</string>
    <string name="subtitle_stater_page">Ajudamos pessoas a reciclarem seu lixo de forma eficiente.</string>
    <string name="signin_btn">Entrar</string>
    <string name="signup_btn">Cadastre-se</string>
    <string name="next">Seguinte</string>

    <!--SignIn-->
    <string name="login_name">Nome</string>
    <string name="login_password">Senha</string>
    <string name="login_btn">Login</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>

    <!--SignUp-->
    <string name="register_title">Cadastro</string>
    <string name="register_finish">Finalizar cadastro</string>
    <string name="title_activity_home">Map</string>

    <!--Descarte-->
    <string name="o_que_vai_descarta">O que vai descartar?</string>
    <string name="onde_vai_descarta">Onde vai descartar?</string>
    <string name="descarte_type_btn">Seguinte</string>

    <string name="title_activity_main_home">MainHomeActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_usuario">usuario</string>
    <string name="search_hint">Pesquise aqui, ex: Plástico</string>
    <string name="Recycle">Recycle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>