<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F5"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/s_mbolo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="142dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/app_name"
        android:textColor="#322153"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="167dp"
        android:layout_height="105dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="255dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/title_stater_page"
        android:textColor="#322153"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto"
        android:text="@string/subtitle_stater_page"
        android:textColor="#6C6C80"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="362dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@color/greenpeace"
        android:fontFamily="@font/roboto_bold"
        android:onClick="redirectLogin"
        android:text="@string/signin_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="362dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_bold"
        android:onClick="redirectRegister"
        android:text="@string/signup_btn"
        android:textAllCaps="false"
        android:textColor="@color/greenpeace"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/greenpeace"
        app:strokeWidth="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>