<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/register_title"
        android:textColor="@color/titulos"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="Sobrenome"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personLastName" />

    <EditText
        android:id="@+id/personLastName"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/login_name"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/personCPF"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="CPF"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personName" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="Senha"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personCPF" />

    <EditText
        android:id="@+id/textRepeatPassword"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="Repetir Senha"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="120dp"
        android:background="@color/greenpeace"
        android:backgroundTint="#34CB79"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>